# MS2DECIDE

./: .gitignore  LICENSE.txt  README.adoc  README.md  pyproject.toml
Test/Output file/: k_final.tsv
doc/: Usage.md
src/: README.md
src/ms2decide/: Auth.py  AuthMail.py  ClosestGNPS.py  ClosestGNPS2.py  ConfEval.py  IsdbAnnotation.py  K.py  K_estimation.py  K_estimation_GUI.py  K_estimation_by_id.py  K_estimation_with_GNPS2.py  K_old.py  MS2decideGUI.py  MatchedSpectra.py  Matching.py  MgfInstance.py  MultipleSourceAnnotation.py  MultipleSourceAnnotation_to_dataframeForSiriusFormula.py  SiriusAnnotation.py  SiriusAnnotationWithFormula.py  Tanimotos.py  Tool.py  Util.py  __about__.py  gnps_empty_repport.py
tests/: __init__.py  test.py
tests/input/Sirius mia Corynanthean single/: canopus_formula_summary.tsv  canopus_formula_summary_adducts.tsv  compound_identifications.tsv  formula_identifications.tsv  mia Corynanthean single.mgf  predictions.tsv  report.mztab
tests/input/Sirius mia Corynanthean single/1_mia Corynanthean single_10-hydroxygeissoschizolMH/: formula_candidates.tsv
tests/input/Sirius mia double/: canopus_formula_summary.tsv  canopus_formula_summary_adducts.tsv  compound_identifications_adducts.tsv  formula_identifications.tsv  mia double.mgf  predictions.tsv  report.mztab
tests/input/Sirius mia double/1_mia double - Copie_10-hydroxygeissoschizolMH/: formula_candidates.tsv
tests/input/Sirius mia double/2_mia double - Copie_10-hydroxyusambarineMH/: formula_candidates.tsv  structure_candidates.tsv
