[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ms2decide"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "MejriY", email = "yassinemejri96@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["rdkit", "matchms", "pandas", "openpyxl", "requests", "jupyter", "pytest", "responses", "subprocess"]

[project.urls]
Documentation = "https://github.com/unknown/ms2decide#readme"
Issues = "https://github.com/unknown/ms2decide/issues"
Source = "https://github.com/unknown/ms2decide"

[tool.hatch.version]
path = "src/ms2decide/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/ms2decide tests}"

[tool.coverage.run]
source_pkgs = ["ms2decide", "tests"]
branch = true
parallel = true
omit = [
  "src/ms2decide/__about__.py",
]

[tool.coverage.paths]
ms2decide = ["src/ms2decide", "*/ms2decide/src/ms2decide"]
tests = ["tests", "*/ms2decide/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
